# flightcost-analysis-agent

./: .gitignore  Makefile  README.md  app.Dockerfile  celery.Dockerfile  docker-compose.yml  pyproject.toml  tasks.py
app/: home.py  main.py  streamlit_app.py  tasks.py
app/agent/: __init__.py  client.py  constants.py  graph.py  manifest_loader.py  router_prompt.py  router_schema.py  runner.py  state.py  tracing.py
app/api/v1/: api.py  chat.py
app/core/: config.py  limiter.py  logging.py  metrics.py  middleware.py
app/mcp/: aggregator_server.py  analytics_server.py  main.py
app/mcp_servers/: aggregator_server.py  analytics_server.py  flight_search_server.py  main.py  screenshot_server.py
app/tools/: aggregator.py  analytics.py  flight_search.py  screenshot.py
app/tools/manifests/: aggregator.yaml  analytics.yaml  flight_search.yml  screenshot.yaml
app/tools/models/: aggregator_model.py  analytics_model.py  flight_search_model.py  screenshot_model.py
tools_server/: Dockerfile
